--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <h3>历史记录</h3>
             <ul id="history-list"></ul>
         </div>
-        <div class="author">张锦华著，保留权利2025，允许开源</div>
+        <div class="author">允许开源</div>
     </div>
 
     <script>
